# ChemDyg

./: ChemDyg_example_script.cfg  DEBUG_chem_diags_timestep.py  MANIFEST.in  README.md  chemdyg.py  setup.cfg
chemdyg/: __init__.py  chemdyg.py  main.py
chemdyg/templates/: chemdyg_QBO_diags.bash  chemdyg_STE_flux_diags.bash  chemdyg_TOZ_eq_plot.bash  chemdyg_cmip_comparison.bash  chemdyg_diags.bash  chemdyg_index.bash  chemdyg_lat_lon_plots.bash  chemdyg_noaa_co_comparison.bash  chemdyg_nox_emis_plots.bash  chemdyg_o3_hole_diags.bash  chemdyg_pres_lat_plots.bash  chemdyg_summary_table.bash  chemdyg_surf_o3_diags.bash  chemdyg_temperature_eq_plot.bash  chemdyg_ts.bash  e3sm_chem_noaa_co_comparison.bash  e3sm_pres_lat_plots.bash  o3_hole_diags.bash  surf_o3_diags.bash
conda/: dev.yml
templates/: STE_flux_diags.bash  TOZ_eq_plot.bash  chem_summary_table.bash  e3sm_chem_cmip_comparison.bash  e3sm_chem_diags.bash  e3sm_chem_diags_ts.bash  e3sm_chem_index.bash  e3sm_chem_noaa_co_comparison.bash  e3sm_lat_lon_plots.bash  e3sm_nox_emis_plots.bash  e3sm_pres_lat_plots.bash  temperature_eq_plot.bash
zppy_e3sm_chem_diags/templates/: STE_flux_diags.bash  e3sm_chem_diags_ts.bash  o3_hole_diags.bash
