[metadata]
name = zppy-e3sm-chem-diags
version = 1.0.0
author = Hsiang-He Lee
author_email = lee1061@llnl.gov
description = Chemistry Diagnostics Package
long_description = file: README.md
long_description_content_type = text/x-md
url = https://github.com/E3SM-Project/ChemDyg
project_urls =
    Bug Tracker = https://github.com/E3SM-Project/ChemDyg/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
   zppy >=2.2.0
