[metadata]
name = chemdyg
version = 0.1.2
author = Hsiang-He Lee, Qi Tang, Michael J. Prather, Jean-Christophe Golaz, Xylar Asay-Davis
author_email = lee1061@llnl.gov
description = E3SM Chemistry Diagnostics Package
long_description = file: README.md
long_description_content_type = text/x-md
url = https://github.com/E3SM-Project/ChemDyg
project_urls =
    Bug Tracker = https://github.com/E3SM-Project/ChemDyg/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
   cartopy
   matplotlib
   netcdf4
   numpy
   pandas
   scipy
   xarray
   zppy >=2.2.0
